--- a/relatorio_mapas_sarampo_no_code.Rmd
+++ b/relatorio_mapas_sarampo_no_code.Rmd
@@ -1743,4 +1743,5 @@ Todos os indicadores utilizados neste relatório são baseados em:
 
 *Para dúvidas metodológicas, entre em contato com a equipe técnica responsável.*
 
+*Para dúvidas em relação ao código, entre em contato com Carina Leão de Matos. E-mail: carinamatos.svs@gmail.com*
 
